<resources>
    <string name="app_name">TaskApp</string>
    <string name="welcome">Welcome to TaskPro </string>
    <string name="signin">Please enter email and password to log in </string>
    <string name="user_name">Adriana</string>
    <string name="name">   Insert valid email here</string>
    <string name="password">   Insert valid password here</string>
    <string name="login">LOGIN </string>
    <string name="comp">completed tasks</string>
    <string name="rem">remaining tasks</string>
    <string name="task">Insert Task Name</string>
    <string name="subt">Insert Subtask Name</string>
</resources>
